<resources>
    <string name="app_name">Grab and Go</string>
    <string name="welcome_text">Welcome to Grab&amp;Go App!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_success">Email verification has been sent</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="you_are_signed_in">Successfully Signed to Grab and Go</string>
    <string name="go_and_grab_desc">Shopping made easy with just one click</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="shopping_history">Shopping history</string>
    <string name="user_profile_title">My Profile</string>
    <string name="user_name">John Doe</string>
    <string name="user_email">johndoe@gmail.com</string>
    <string name="shopping_history_title">My Shopping History</string>
    <string name="shop_name">ABC mart</string>
    <string name="history_total_text">Total paid</string>
    <string name="history_datetime">Mon, 12 Jun 2021</string>

    <string name="cart_title">My Cart</string>
    <string name="cart_loading_text">Processing your photo…</string>
    <string name="cart_empty_text">Your photo doesn\'t contain any items</string>
    <string name="cart_product_name">Indomie</string>
    <string name="cart_qty">x1</string>
    <string name="cart_subtotal">Rp5.000</string>
    <string name="cart_total_text">Total</string>
    <string name="cart_total">Rp50.000</string>
    <string name="cart_go_back">Go back</string>
    <string name="cart_to_checkout">Checkout</string>

    <string name="btn_capture_contentdesc">Scan product</string>
    <string name="pic_preview">test_image_preview_data</string>
    <string name="action_settings">Settings</string>

    <string name="payment">Gopay</string>
    <string name="payment_complete">Payment Completed Successfully</string>
    <string name="checkout_thanks">Thank you! Your transaction has been completed successfully via GOPAY.</string>
    <string name="checkout_total_text">Total:</string>
    <string name="checkout_done">Done</string>

    <string name="fab_content_desc">Lorem Ipsum</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam porta at augue a laoreet.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>