<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".ui.checkout.CheckoutFragment">

    <ImageView
        android:id="@+id/img_check"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:tint="?attr/colorSecondary"
        android:src="@drawable/ic_round_check_circle_outline_24"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/tv_payment_compelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/payment_complete"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/tv_thank_you"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_compelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="16dp"
        android:text="@string/checkout_thanks"
        android:textAlignment="center"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tv_total_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_thank_you"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="6dp"
        android:text="@string/checkout_total_text"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_total_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_total_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/cart_total"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="@dimen/material_btn_height"
        app:layout_constraintTop_toBottomOf="@id/tv_total_payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:layout_marginHorizontal="8dp"
        app:cornerRadius="32dp"
        app:backgroundTint="?attr/colorPrimary"
        android:text="@string/checkout_done"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>