<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp">

    <TextView
        android:id="@+id/tv_item_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_item_qty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="viewEnd"
        tools:text="@string/cart_product_name" />

    <TextView
        android:id="@+id/tv_item_qty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tv_item_subtotal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/tv_item_product_name"
        app:layout_constraintTop_toTopOf="@id/tv_item_product_name"
        tools:text="@string/cart_qty" />

    <TextView
        android:id="@+id/tv_item_subtotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_item_qty"
        app:layout_constraintTop_toTopOf="@+id/tv_item_qty"
        android:textAlignment="viewEnd"
        tools:text="@string/cart_subtotal" />

</androidx.constraintlayout.widget.ConstraintLayout>