<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_course"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/shop_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingVertical="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_datetime"/>
        <TextView
            android:id="@+id/tv_datetime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/tv_shop_name"
            app:layout_constraintStart_toEndOf="@id/tv_shop_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_shop_name"
            tools:text="@string/history_datetime"
            android:textAlignment="viewEnd"/>
        <TextView
            android:id="@+id/tv_total_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_shop_name"
            app:layout_constraintStart_toStartOf="@id/tv_shop_name"
            app:layout_constraintEnd_toStartOf="@id/tv_total"
            android:text="@string/cart_total_text"
            />
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_total_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_shop_name"
            android:paddingHorizontal="16dp"
            tools:text="@string/cart_total"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorPrimary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>