<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.cart.CartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/cart_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:theme="@style/Theme.Grabandgoandroid.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:titleTextColor="@color/black"
                app:title=""
                android:theme="@style/ToolbarColoredBackArrow"
                app:popupTheme="@style/Theme.Grabandgoandroid.PopupOverlay">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/cart_title"
                    android:textColor="@color/black"/>
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp">

            <ProgressBar
                android:id="@+id/cart_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:translationZ="10dp"
                android:visibility="gone"
                tools:visibility="visible"/>
            <TextView
                android:id="@+id/tv_loading_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cart_progress_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/cart_loading_text"
                android:textAlignment="center"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tv_empty_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_back"
                android:paddingVertical="16dp"
                android:text="@string/cart_empty_text"
                android:textAlignment="center"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/tv_cart_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="@string/cart_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.01"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_cart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.15"/>
            <TextView
                android:id="@+id/tv_total_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_cart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_total"
                android:layout_marginTop="16dp"
                android:text="@string/cart_total_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_cart"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                tools:text="@string/cart_total"
                android:textAlignment="viewEnd"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="17sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:minHeight="60dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                app:cornerRadius="32dp"
                app:backgroundTint="?attr/colorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_checkout"
                app:layout_constraintTop_toBottomOf="@id/tv_total"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/white"
                android:text="@string/cart_go_back"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_checkout"
                android:layout_width="0dp"
                android:minHeight="60dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="8dp"
                app:cornerRadius="32dp"
                app:backgroundTint="@color/white_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_back"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                android:textColor="@color/black"
                android:text="@string/cart_to_checkout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>